fix: Correct font family name in CSS
The font-family name in the CSS was incorrect, missing spaces between words. This commit corrects the name to "Ma Shan Zheng" to ensure the correct font is applied.
It also removes unused rollupOptions from vite.config.ts and sets emptyOutDir to true for cleaner builds.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "2026-new-year-greeting",
   "private": true,
@@ -10,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^12.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "framer-motion": "^12.0.0"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
